# inbox

./: .gitignore  .gitmodules  .sqlfluff  CONTRIBUTING.md  README.md  compose.yaml  example.env
.github/workflows/: build-docker-images.yml
cfg/: cspell-dictionary.txt  pre-commit-config.yaml  sqlfluff
mqtt-publisher/: Cargo.toml  Dockerfile
mqtt-publisher/src/: main.rs
publisher/: Cargo.toml  Dockerfile
publisher/src/: main.rs  processor_connection.rs  server.rs  sse_server.rs  types.rs  util.rs
sql_extensions/: 00000_init.sql  Dockerfile  apply-sql-extensions.sh
sql_extensions/migrations/: 00000_init.sql  00000_mqtt_events.sql  00001_add_get_top_markets_function.sql  00001_special_queries.sql  00002_latest_periodic_state.sql  00003_periodic_state_view.sql  00004_indexes.sql  00005_indexes_2.sql  00005_my_pools.sql  00006_user_rank.sql  mqtt-events.sql  special-queries.sql
sql_extensions/sql/: 00000_init.sql  00001_add_generated_column_for_indexing.sql  00002_add_grafana_role.sql
terraform/: init.sh  main.tf  outputs.tf  variables.tf  variables.tfvars.template
terraform/modules/db/: main.tf  outputs.tf  run-migrations.sh
terraform/modules/grafana/: main.tf  outputs.tf
terraform/modules/migrations/: main.tf  outputs.tf  run-migrations.sh  variables.tf
terraform/modules/mqtt/: main.tf  variables.tf
terraform/modules/no_auth_policy/: outputs.tf
terraform/modules/postgrest/: main.tf  outputs.tf  variables.tf
terraform/modules/processor/: main.tf  variables.tf
